[package]
edition = "2018"
name = "spork"
version = "0.3.1"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]

[dependencies]
bytes = "0.4"
futures = { version = "0.3", features = ["compat", "io-compat"] }
log = "0.4"
log4rs = "0.8"
tokio = "0.1"

[dev-dependencies]
mock-io = { git = "https://github.com/chaaz/mock-io" }

[lib]
name = "spork"
path = "src/lib.rs"
