[package]
name = "spork"
version = "0.4.0"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
error-chain = "0.12"
futures = "0.3"
log = "0.4"

[dependencies.tokio]
version = "0.2"
features = ["tcp"]

[dependencies.tokio-util]
version = "0.3"
features = ["codec", "compat"]

[dev-dependencies]
tokio-test = "0.2"

[lib]
name = "spork"
path = "src/lib.rs"
